--- a/CSS/style.css
+++ b/CSS/style.css
@@ -131,6 +131,39 @@ BODY{
 padding: 100px 0px;
 }
 
+.cardKnowledge{
+    padding: 30px;
+    border: 1px solid #dedede;
+    display: flex;
+    flex-direction: column;
+    height: 400px;
+    justify-content: space-between;
+    margin-bottom: 30px;
+  
+    p{
+      overflow: hidden;
+      display: -webkit-box;
+      -webkit-line-clamp: 4;
+             line-clamp: 4; 
+      -webkit-box-orient: vertical;
+    }
+  
+    i{
+      font-size: 64px;
+    }
+  }
+
+  .newsBox{
+  margin-bottom: 80px;
+  padding-bottom: 80px;
+  border-bottom: 1px solid #dedede;
+  .txtNews{
+    display: flex;
+    flex-direction: column;
+    min-height: 200px;
+    justify-content: center;
+  }
+  }
 .yellow{
      background-color: yellow;
 }
